--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
@@ -22,7 +17,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prettier": "3.5.3",
-    "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "dependencies": {
+    "mysql2": "^3.14.1",
+    "next": "^15.3.3"
   }
 }
