--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prettier": "3.5.3",
+    "prisma": "^6.9.0",
     "typescript": "^5"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
+    "bcrypt": "^6.0.0",
     "mysql2": "^3.14.1",
     "next": "^15.3.3"
   }
