--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
-    "next": "^15.3.3"
+    "next": "^15.3.3",
+    "zod": "^3.25.58"
   }
 }
