--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.9.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.514.0",
+    "mysql2": "^3.14.1",
+    "next": "^15.3.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.58"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -18,16 +36,8 @@
     "eslint-config-next": "15.3.3",
     "prettier": "3.5.3",
     "prisma": "^6.9.0",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.9.0",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1",
-    "next": "^15.3.3",
-    "zod": "^3.25.58"
   }
 }
