--- a/.github/ISSUE_TEMPLATE/fix.yml
+++ b/.github/ISSUE_TEMPLATE/fix.yml
@@ -1,6 +1,6 @@
-name: "[ Fix ] 버그 수정"
+name: '[ Fix ] 버그 수정'
 description: 수정이 필요한 버그 사항을 작성해주세요.
-title: "[ Fix ] "
+title: '[ Fix ] '
 body:
   - type: markdown
     attributes:
