--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
