feat: 햄버거 메뉴 제외 헤더바 구현

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
     "@ianvs/prettier-plugin-sort-imports"
   ],
   "semi": true,
+  "jsxSingleQuote": true,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
