--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.58"
   },
