--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.17.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.514.0",
     "mysql2": "^3.14.1",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
