--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.58"
