--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/addon-docs": "^9.0.13",
     "@storybook/addon-vitest": "^9.0.13",
     "@storybook/nextjs-vite": "^9.0.13",
+    "@svgr/core": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
@@ -83,6 +84,7 @@
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.2.4"
   },
   "lint-staged": {
