chore: 배포를 위한 설정 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,5 +36,11 @@
     ".next/types/**/*.ts",
     "types/next-auth.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "**/__tests__/**",
+    "**/__mocks__/**",
+    "**/*.test.ts",
+    "**/*.test.tsx"
+  ]
 }
