--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^9.33.0",
     "apexcharts": "^4.7.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
